--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -3,11 +3,7 @@
 
   <p>
     Плагин
-    <a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
+    <a href="https://github.com/posthtml/posthtml-include" target="_blank" rel="noopener noreferrer">
       posthtml-include
     </a>
     позволяет добавлять в HTML-файлы страниц код из других HTML-файлов
@@ -26,7 +22,7 @@
   <p>
     Синтаксис добавление фрагмента в главный файл:
     <code>
-      &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
-    </code>
+&lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
+</code>
   </p>
 </article>
