--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,12 +5,10 @@
 @import './normalize.scss';
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import"./utils/variables";
+@import './utils/variables';
 
 @import './nastya.scss';
 
-@import"./andrey";
+@import './andrey';
 
-
-
-
+@import './layouts/masters';
