--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,39 +1,44 @@
-<section class="masters-section">
-  <span class="masters-subtitle">для настоящих ценителей атмосферы </span>
-  <h2 class="masters-title">Наши мастера</h2>
-  <ul class="masters-list">
-    <li class="masters-item">
-      <img src="" alt="Имя Мастера" class="masters-img" />
-      <h3 class="master-name">John Smith</h3>
-      <span class="master-specialist">Extreme Barber</span>
-      <ul class="social-list">
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-      </ul>
-    </li>
-    <li class="masters-item">
-      <img src="" alt="Имя Мастера" class="masters-img" />
-      <h3 class="master-name">Michele Doe</h3>
-      <span class="master-specialist">Extreme Barber</span>
-      <ul class="social-list">
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-      </ul>
-    </li>
-    <li class="masters-item">
-      <img src="" alt="Имя Мастера" class="masters-img" />
-      <h3 class="master-name">Alan Black</h3>
-      <span class="master-specialist">Extreme Barber</span>
-      <ul class="social-list">
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-        <li class="social-item">Соц Сеть</li>
-      </ul>
-    </li>
-  </ul>
+<section class="section">
+  <div class="container">
+    <p class="section-discription">для настоящих ценителей атмосферы</p>
+    <h2 class="section-title">Наши мастера</h2>
+    <ul class="masters-list">
+      <li class="masters-item">
+        <div class="wrap masters-wrap">
+          <img src="" alt="Имя Мастера" class="img" />
+        </div>
+        <div class="master-information">
+          <h3 class="master-name">John Smith</h3>
+          <p class="master-specialist">Extreme Barber</p>
+          <div>
+            СОЦИАЛЬНЫЕ СЕТИ
+          </div>
+        </div>
+      </li>
+      <li class="masters-item">
+        <div class="wrap masters-wrap">
+          <img src="" alt="Имя Мастера" class="img" />
+        </div>
+        <div class="master-information">
+          <h3 class="master-name">Michele Doe</h3>
+          <p class="master-specialist">Extreme Barber</p>
+          <div>
+            СОЦИАЛЬНЫЕ СЕТИ
+          </div>
+        </div>
+      </li>
+      <li class="masters-item">
+        <div class="wrap masters-wrap">
+          <img src="" alt="Имя Мастера" class="img" />
+        </div>
+        <div class="master-information">
+          <h3 class="master-name">Alan Black</h3>
+          <p class="master-specialist">Extreme Barber</p>
+          <div>
+            СОЦИАЛЬНЫЕ СЕТИ
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
