--- a/src/sass/normalize.css
+++ b/src/sass/normalize.css
@@ -1,8 +1,3 @@
-@charset "UTF-8";
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
 /*! modern-normalize v0.7.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -252,25 +247,4 @@ Add the correct display in Chrome and Safari.
 summary {
   display: list-item;
 }
-
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
-  color: #212121;
-  max-width: 960px;
-  padding: 15px;
-}
-
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: lightgrey;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.nastya-title {
-  color: yellow;
-}
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=normalize.css.map */
