--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -265,3 +265,14 @@ Add the correct display in Chrome and Safari.
 summary {
   display: list-item;
 }
+
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
