--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="container feature">
         <div>
-            <span class="description">старая традиционная школа</span>
+            <p class="description">старая традиционная школа</p>
             <h2 class="section-title">Почему приходят именно к нам?</h2>
             <p>О нас говорят только хорошее. Но лучше
                 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
