delete class "feature"

--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,5 +1,5 @@
 <section class="section">
-    <div class="container feature">
+    <div class="container">
         <div>
             <p class="description">старая традиционная школа</p>
             <h2 class="section-title">Почему приходят именно к нам?</h2>
