--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,15 +1,23 @@
 .button {
+  border: none;
+  padding: 12px 20px;
+  background-color: transparent;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
 
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+
+  color: #ffffff;
 }
 
 .button--white {
-
 }
 
 .button-slider {
-
 }
 
 .button-close {
-  
 }
