--- a/src/sass/layouts/_base.scss
+++ b/src/sass/layouts/_base.scss
@@ -5,7 +5,7 @@ body {
   font-size: 18px;
   line-height: 1.66;
   letter-spacing: 0.02em;
-  color: $black-text-color;
+  //   color: $black-text-color;
 }
 
 .section {
@@ -30,7 +30,7 @@ body {
   font-size: 42px;
   line-height: 1.66;
   letter-spacing: 0.05em;
-  color: $black-text-color;
+  //   color: $black-text-color;
 }
 
 .description {
@@ -40,13 +40,15 @@ body {
   letter-spacing: 0.1em;
   text-transform: uppercase;
 
-  color: $black-text-color;
+  //   color: $black-text-color;
 }
 
 .container {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media screen and (min-width: 480px) {
     max-width: 420px;
