--- a/src/sass/layouts/_base.scss
+++ b/src/sass/layouts/_base.scss
@@ -5,7 +5,7 @@ body {
   font-size: 18px;
   line-height: 1.66;
   letter-spacing: 0.02em;
-  //   color: $black-text-color;
+    color: $black-text-color;
 }
 
 .section {
@@ -30,7 +30,7 @@ body {
   font-size: 42px;
   line-height: 1.66;
   letter-spacing: 0.05em;
-  //   color: $black-text-color;
+    color: $black-text-color;
 }
 
 .description {
@@ -40,7 +40,7 @@ body {
   letter-spacing: 0.1em;
   text-transform: uppercase;
 
-  //   color: $black-text-color;
+    color: $black-text-color;
 }
 
 .container {
