--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,11 +1,11 @@
-// $main-text-color: #555555;
-// $white-text-color: #FFFFFF;
-// $accent-color: #FF6C00;
-// $black-text-color: #303030;
-// $secondary-grey-color: #9DA4BD;
-// $header-price-text: rgba(157, 164, 189, 0.6);
-// $footer-modal-text: rgba(157, 164, 189, 0.4);
+$main-text-color: #555555;
+$white-text-color: #FFFFFF;
+$accent-color: #FF6C00;
+$black-text-color: #303030;
+$secondary-grey-color: #9DA4BD;
+$header-price-text: rgba(157, 164, 189, 0.6);
+$footer-modal-text: rgba(157, 164, 189, 0.4);
 
-// $main-font: "Open Sans", sans-serif;
-// $title-font: "Raleway", sans-serif;
+$main-font: "Open Sans", sans-serif;
+$title-font: "Raleway", sans-serif;
 
