--- a/src/sass/components/_title-text.scss
+++ b/src/sass/components/_title-text.scss
@@ -1,22 +1,4 @@
 .title-hero {
-
-}
-
-.title-section {
-
-}
-
-.title-section--white {
-
-}
-
-//  время работы в т.ч.
-.section-discription {
-
-}
-
-.section-discription--white {
-
 }
 
 .section-discription--gray {
@@ -40,5 +22,5 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 1.86;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
 }
