--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -1,3 +1,34 @@
 .section {
-  
+  padding-top: 84px;
+  padding-bottom: 84px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+  outline: teal solid 1px;
+}
+
+.section-title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.66;
+  letter-spacing: 0.05em;
+  color: $black-text-color;
+}
+
+.section-description {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: $black-text-color;
 }
