--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,11 +1,14 @@
 $main-text-color: #555555;
-$white-text-color: #FFFFFF;
-$accent-color: #FF6C00;
+$white-text-color: #ffffff;
+$accent-color: #ff6c00;
 $black-text-color: #303030;
-$secondary-grey-color: #9DA4BD;
+$secondary-grey-color: #9da4bd;
 $header-price-text: rgba(157, 164, 189, 0.6);
 $footer-modal-text: rgba(157, 164, 189, 0.4);
+$primary-bgc: #111319;
+$section-bgc: #f7f7f7;
 
-$main-font: "Open Sans", sans-serif;
-$title-font: "Raleway", sans-serif;
+$main-font: 'Open Sans', sans-serif;
+$title-font: 'Raleway', sans-serif;
 
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
