--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,5 +1,16 @@
 .button {
-
+  padding: 12px 20px;
+  border-radius: 5px;
+  color: #303030;
+  background: #FFFFFF;
+  border: 1px solid #FF6C00;
+  box-sizing: border-box;
+  border-radius: 25px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
 }
 
 .button--white {
