--- a/src/sass/layouts/_base.scss
+++ b/src/sass/layouts/_base.scss
@@ -8,6 +8,13 @@ body {
   color: $black-text-color;
 }
 
+h2{
+  margin: 0;
+  font-size: 42px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
+}
+
 .section {
   padding-top: 84px;
   padding-bottom: 84px;
