--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,12 +24,25 @@
 
 // Основа
 @import './layouts/header';
-
 @import './layouts/hero';
 @import './layouts/about-us';
 @import './layouts/price';
 @import './layouts/feature';
 @import './layouts/masters';
 @import './layouts/gallery';
-
 @import './layouts/footer';
+
+// components
+@import './components/logo';
+@import './components/menu';
+@import './components/overlay';
+@import './components/menu-mob';
+@import './components/contacts';
+@import './components/buttons';
+@import './components/aside';
+@import './components/text';
+@import './components/social';
+@import './components/gallery';
+@import './components/form-footer';
+@import './components/address';
+@import './components/copyright';
