--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,5 +1,21 @@
 <div class="section">
   <div class="container">
-    Услуги и цены
+
+    <h2 class="section-title">Услуги и цены</h2>
+    <div class="service">
+      <span>Онлайн-запись</span>
+      <span class="decor"></span>
+      <span class="price">200$</span>
+    </div>
+    <style>
+    .service {
+    display: flex;
+    }
+    span.decor {
+    flex: 1;
+    width: 100%;
+    border-bottom: 1px solid black;
+    }
+    </style>
   </div>
 </div>
