--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,42 +1,135 @@
-<section class="section">
+<section class="section master-section">
   <div class="container">
     <p class="section-discription">для настоящих ценителей атмосферы</p>
     <h2 class="section-title">Наши мастера</h2>
     <ul class="masters-list">
       <li class="masters-item">
         <div class="wrap masters-wrap">
-          <img src="" alt="Имя Мастера" class="img" />
+          <img
+            src="./images/our-master/our-masters-img1@1x.jpg"
+            alt="Имя Мастера"
+            class="img master-img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <div>
-            СОЦИАЛЬНЫЕ СЕТИ
-          </div>
+          <ul class="master-links">
+            <li class="master-link">
+              <a href="" aria-label="Instagram" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Twitter" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Facebook" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Linkedin" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </li>
       <li class="masters-item">
         <div class="wrap masters-wrap">
-          <img src="" alt="Имя Мастера" class="img" />
+          <img
+            src="./images/our-master/our-masters-img2@1x.jpg"
+            alt="Имя Мастера"
+            class="img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <div>
-            СОЦИАЛЬНЫЕ СЕТИ
-          </div>
+          <ul class="master-links">
+            <li class="master-link">
+              <a href="" aria-label="Instagram" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Twitter" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Facebook" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Linkedin" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </li>
       <li class="masters-item">
         <div class="wrap masters-wrap">
-          <img src="" alt="Имя Мастера" class="img" />
+          <img
+            src="./images/our-master/our-masters-img3@1x.jpg"
+            alt="Имя Мастера"
+            class="img"
+          />
         </div>
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <div>
-            СОЦИАЛЬНЫЕ СЕТИ
-          </div>
+          <ul class="master-links">
+            <li class="master-link">
+              <a href="" aria-label="Instagram" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Twitter" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Facebook" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="master-link">
+              <a href="" aria-label="Linkedin" class="link">
+                <svg class="master-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
