--- a/src/sass/layouts/_masters.scss
+++ b/src/sass/layouts/_masters.scss
@@ -1,19 +1,77 @@
+.master-section {
+  background: $section-bgc;
+}
 .masters-list {
-  display: flex;
 }
 
 .masters-item {
+  width: 370px;
+  height: 502px;
   &:not(:last-child) {
     margin-right: 30px;
   }
 }
+.masters-wrap {
+  // display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
 
+.master-img {
+}
+.master-information {
+}
 .master-name {
   margin-top: 0px;
   margin-bottom: 8px;
+  font-size: 18px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: $black-text-color;
 }
 
 .master-specialist {
   margin-top: 0px;
   margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+.master-information {
+  // text-align: center;
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-right: 30px;
+  color: $accent-color;
+}
+.master-icon {
+  width: 20px;
+  height: 20px;
+  fill: $black-text-color;
+}
+.master-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.master-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: $white-text-color;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
+  &:hover .master-icon,
+  &:focus .master-icon {
+    fill: $accent-color;
+  }
 }
