--- a/src/sass/layouts/_feature.scss
+++ b/src/sass/layouts/_feature.scss
@@ -4,17 +4,71 @@
 .feature-examples {
 }
 
+.feature-title {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  line-height: 1.16;
+}
+  
+
 .feature-description {
 }
 
 .feature-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.feature-position:nth-child(2) {
+    margin-top: 35px;
+}
+
+.feature-position:nth-child(3) {
+    margin-top: -35px;
 }
 
 .feature-item {
+  width: 100%;
+  height: 133px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: $section-bgc;
+}
+
+.feature-position {
+  width: calc(100%/2);
+  max-width: 193px;
+  padding: 15px;   
 }
 
 .feature-number {
+  display: block;
+  font-family: Open Sans;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.35;
+  letter-spacing: 0.05em;
+  text-align: center;
 }
 
 .feature-words {
+  font-family: Open Sans;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  color: $black-text-color;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+.feature-text {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.feature-block-first {
+}
+
+.feature-block-second {
+  margin-top: 40px;
 }
