--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -1,8 +1,79 @@
 .about {
+  list-style: none;
+
+  @media screen and (min-width: 480px) {
+    // margin-left: 31px;
+    margin-right: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .about-gallery {
+  display: none;
+  // padding-left: 15px;
+  padding-right: 15px;
+  height: 445px;
+
+  @media screen and (min-width: 768px) {
+    width: 330px;
+    height: 235px;
+    display: flex;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    height: 445px;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
+.about-block {
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 50%;
+    padding-left: 30px;
+  }
+}
+
+.about-item.text {
+  padding-left: 34px;
+}
+
+.about-desc {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
 .about-text {
+  font-size: 14px;
+  line-height: 1.85;
+  scroll-padding-right: 20px;
+}
+.section-title.about {
+  margin: 0;
+}
+
+.description.about::before {
+  content: '';
+  width: 1px;
+  height: 60px;
+  background: #303030;
 }
