Внес правки по секции мастерам

--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -14,31 +14,31 @@
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <ul class="master-links">
-            <li class="master-link">
+          <ul class="social-list">
+            <li class="social-link">
               <a href="" aria-label="Instagram" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Twitter" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Facebook" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Linkedin" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -57,31 +57,31 @@
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <ul class="master-links">
-            <li class="master-link">
+          <ul class="social-list">
+            <li class="social-link">
               <a href="" aria-label="Instagram" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Twitter" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Facebook" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Linkedin" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -100,31 +100,31 @@
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
           <p class="master-specialist">Extreme Barber</p>
-          <ul class="master-links">
-            <li class="master-link">
+          <ul class="social-list">
+            <li class="social-link">
               <a href="" aria-label="Instagram" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Twitter" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Facebook" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="master-link">
+            <li class="social-link">
               <a href="" aria-label="Linkedin" class="link">
-                <svg class="master-icon">
+                <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
