--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 // вспомогательное
 @import './layouts/section';
 @import './layouts/container';
+@import './components/social';
 
 // Основа
 @import './layouts/header';
