--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,21 +1,53 @@
-<div class="section">
+<section class="section price">
   <div class="container">
-
-    <h2 class="section-title">Услуги и цены</h2>
-    <div class="service">
-      <span>Онлайн-запись</span>
-      <span class="decor"></span>
-      <span class="price">200$</span>
+    <h3 class="section-description section-discription--gray">Проведи время в компании лучших мастеров</h3>
+    <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
+    <div class="price-content">
+      <ul class="price-list text-price-mob" >
+        <li class="service" >
+          <span>Мужская стрижка</span>
+          <span class="decor"></span>
+          <span class="price">от 300 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Стрижка бороды</span>
+          <span class="decor"></span>
+          <span class="price">от 200 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Стрижка усов</span>
+          <span class="decor"></span>
+          <span class="price-peace">от 200 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Бритье опасной бритвой</span>
+          <span class="decor"></span>
+          <span class="price">от 200 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Cтрижка у стажера</span>
+          <span class="decor"></span>
+          <span class="price">от 50 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Стрижка под насадку</span>
+          <span class="decor"></span>
+          <span class="price">от 200 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Детская стрижка (до 12 лет)</span>
+          <span class="decor"></span>
+          <span class="price">от 300 грн.</span>
+        </li>
+        <li class="service" >
+          <span>Камуфлирование седины</span>
+          <span class="decor"></span>
+          <span class="price">от 200 грн.</span>
+        </li>
+      </ul>
+      <div class="price-button-box">
+        <button class="button">онлайн-запись</button>
+      </div>
     </div>
-    <style>
-    .service {
-    display: flex;
-    }
-    span.decor {
-    flex: 1;
-    width: 100%;
-    border-bottom: 1px solid black;
-    }
-    </style>
   </div>
-</div>
+</section>
