--- a/src/sass/layouts/_price.scss
+++ b/src/sass/layouts/_price.scss
@@ -1,2 +1,35 @@
 .price {
+  // background-image: url(../images/price/price-img@1x.jpg);
+  background-color: $primary-bgc;
+}
+
+.price-content {
+  color: $secondary-grey-color;
+}
+
+.service {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.decor {
+  flex: 1;
+  width: 100%;
+  border-bottom: 1px solid $underscore;
+}
+
+.price-title {
+  margin-bottom: 44px;
+}
+
+.price-list {
+  padding: 30px;
+  margin-bottom: 50px;
+
+  background-image: 
+  linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.price-item:not(:last-child) {
+  margin-bottom: 20px;
 }
