--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -15,13 +15,17 @@
 }
 
 .section-title {
-  font-family: Raleway;
+  font-family: $title-font;
   font-style: normal;
   font-weight: 700;
   font-size: 42px;
-  line-height: 1.66;
+  line-height: 1.06521;
   letter-spacing: 0.05em;
   color: $black-text-color;
+}
+
+.section-title--white {
+  color: $white-text-color;
 }
 
 .section-description {
@@ -31,6 +35,7 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: $black-text-color;
+  margin-bottom: 20px;
 }
 
 .section-discription--gray {
