--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,6 +7,7 @@ $header-price-text: rgba(157, 164, 189, 0.6);
 $footer-modal-text: rgba(157, 164, 189, 0.4);
 $primary-bgc: #111319;
 $section-bgc: #f7f7f7;
+$underscore: rgba(157, 164, 189, 0.12);
 
 $main-font: 'Open Sans', sans-serif;
 $title-font: 'Raleway', sans-serif;
