--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,37 +1,37 @@
 <section class="section">
     <div class="container">
         <div class="feature-block-first">
-            <p class="section-description">старая традиционная школа</p>
+            <p class="section-description subtitle">старая традиционная школа</p>
             <h2 class="section-title feature-title">Почему приходят именно к нам?</h2>
             <p class="feature-text text-main">О нас говорят только хорошее. Но лучше
                 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
         </div>
         <div class="feature-block-second">
             <ul class="feature-list">
-                <div class="feature-position">
-                    <li class="feature-item">
+                <li class="feature-item">
+                    <div class="feature-position">
                         <span class="feature-number">600</span>
                         <p class="feature-words">Довольных клиентов в день</p>
-                    </li>
-                </div>
-                <div class="feature-position">
-                    <li class="feature-item">
+                    </div>
+                </li>
+                <li class="feature-item">
+                    <div class="feature-position">
                         <span class="feature-number">50</span>
                         <p class="feature-words">Наград за отличный сервис</p>
-                    </li>
-                </div>
-                <div class="feature-position">
-                    <li class="feature-item">
+                    </div>
+                </li>   
+                <li class="feature-item">
+                    <div class="feature-position">
                         <span class="feature-number">20</span>
                         <p class="feature-words">Лучших мастеров Киева</p>
-                    </li>
-                </div>
-                <div class="feature-position">
-                    <li class="feature-item">
+                    </div>
+                </li>
+                <li class="feature-item">
+                    <div class="feature-position">
                         <span class="feature-number">100</span>
                         <p class="feature-words">Подарков постоянным клиентам</p>
-                    </li>
-                </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
