--- a/src/sass/layouts/_container.scss
+++ b/src/sass/layouts/_container.scss
@@ -16,5 +16,5 @@
   @media screen and (min-width: 1200px) {
     max-width: 1170px;
   }
-  outline: red solid 3px;
+  // outline: red solid 3px;
 }
