--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,45 +1,48 @@
 <section class="section price">
   <div class="container">
-    <h3 class="section-discription--gray">Проведи время в компании лучших мастеров</h3>
+    <h3
+      class="section-description section-discription--gray .section-discription--gray section-discription--gray::before">
+      Проведи время в компании лучших
+      мастеров</h3>
     <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
     <div class="price-content">
-      <ul class="price-list text-price-mob" >
-        <li class="service" >
+      <ul class="price-list text-price-mob">
+        <li class="service">
           <span>Мужская стрижка</span>
           <span class="decor"></span>
           <span class="price">от 300 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Стрижка бороды</span>
           <span class="decor"></span>
           <span class="price">от 200 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Стрижка усов</span>
           <span class="decor"></span>
           <span class="price-peace">от 200 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Бритье опасной бритвой</span>
           <span class="decor"></span>
           <span class="price">от 200 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Cтрижка у стажера</span>
           <span class="decor"></span>
           <span class="price">от 50 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Стрижка под насадку</span>
           <span class="decor"></span>
           <span class="price">от 200 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Детская стрижка (до 12 лет)</span>
           <span class="decor"></span>
           <span class="price">от 300 грн.</span>
         </li>
-        <li class="service" >
+        <li class="service">
           <span>Камуфлирование седины</span>
           <span class="decor"></span>
           <span class="price">от 200 грн.</span>
