почти сделал хедер и герой  на комп.
без лого
без картинки героя.
без стилизированных кнопок

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,48 @@
 <section class="hero">
-  <div class="container">
-    <ul>
-      <li><a href="#"> Instagram </a></li>
-      <li><a href="#"> Youtube </a></li>
-    </ul>
+  <div class="container container-hero">
+    <div class="hero-aside">
+      <!-- <img src="../src/images/header/header.jpg" alt=""> -->
+      <ul class="hero-social-list">
+        <li class="hero-social-item">
+          <a href="#" class="hero-social-link"> Instagram </a>
+        </li>
+        <li class="hero-social-item">
+          <a href="#" class="hero-social-link"> Youtube </a>
+        </li>
+      </ul>
+    </div>
 
-    <div>
+    <div class="hero-main-content">
       <span class="description"> A hair salon for men in Kyiv </span>
-      <h1>BarberShop</h1>
+      <h1 class="hero-title">BarberShop</h1>
       <p>
         Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
         вкусом.
       </p>
     </div>
+    <!-- ----------------------------- -->
 
-    <button>Назад</button>
-    <button>Вперёд</button>
+    <ul class="slider-button-list">
+      <li class="slider-button-item">
+        <button class="slider-btn slider-btn-inactive">Назад</button>
+      </li>
+
+      <li class="slider-button-item">
+        <button class="slider-btn">Вперёд</button>
+      </li>
+    </ul>
+
+    <!-- ------------------------- -->
+    <ul class="dots">
+      <li class="active dot">
+        <button type="button" class="dot-part"></button>
+      </li>
+      <li class="dot">
+        <button type="button" class="dot-part"></button>
+      </li>
+      <li class="dot">
+        <button type="button" class="dot-part"></button>
+      </li>
+    </ul>
   </div>
 </section>
