--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -8,6 +8,8 @@
 
 .logo {
   display: inline-block;
+  z-index: 2;
+ 
   width: 69px;
   height: 56px;
   background-color: red;
@@ -16,6 +18,7 @@
 
 .nav-list {
   display: flex;
+  background-color: $primary-bgc;
 }
 
 .nav-item {
