--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,8 +1,155 @@
 .hero {
   min-height: 680px;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.container-hero {
+  position: relative;
+  display: flex;
+  min-height: 680px;
+}
+
+.hero-aside {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 155px;
+  padding: 100px 15px;
+}
+
+.hero-main-content {
   color: white;
+  margin-left: 250px;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 250px;
+  max-width: 500px;
+}
+
+.hero-title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 1.18;
+
+  letter-spacing: 0.05em;
+
+  color: #ffffff;
+}
+
+.hero-social-list {
+  display: flex;
+
+  transform: rotate(-90deg) scaleX(-1);
+
+  flex-direction: row-reverse;
+  width: 30px;
+  position: relative;
+}
+
+.hero-social-item {
+  padding: 0px 15px;
+}
+
+.hero-social-link {
+  display: block;
+  transform: scaleX(-1);
+}
+
+.hero-social-list:first-of-type::before {
+  content: '';
+  display: inline-block;
+  width: 1px;
+  height: 60px;
+  background: red;
+  position: absolute;
+  top: -50%;
+  left: 50px;
+  transform: rotate(90deg) translateX(50%) translateY(-50%);
 }
 
 .hero-slider {
+}
+
+.dots {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  text-align: right;
+}
+
+.dot {
+  line-height: 0;
+}
+
+.dot:not(:last-of-type) {
+  margin-bottom: 12px;
+}
+
+.dot-part {
+  background: #9da4bd;
+  width: 8px;
+  height: 2px;
+  margin: 0px;
+  padding: 0px;
+  border: none;
+}
+
+.dots .active .dot-part {
+  background-color: #fff;
+  width: 18px;
+}
+
+.slider-btn {
+  padding: 0px;
+  margin: 0px;
+  border: none;
+  background-color: transparent;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-align: right;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+}
+
+.slider-button-item::before {
+  position: absolute;
+  bottom: 0;
+
+  content: '';
+  display: inline-block;
+  width: 60px;
+  height: 5px;
+  color: blue;
+}
+
+// .slider-btn::after {
+//   content: "";
+//   display: inline-block;
+//   width: 60px;
+//   height: 5px;
+//   color: blue;
+//   position: absolute;
+//   top: 50%;
+//   left: 0px;
+//   transform: translateY(-50%);
+//   z-index: 5;
+
+// }
+
+.slider-btn-active {
+}
+
+.slider-btn-inactive {
+  color: rgba(157, 164, 189, 0.6);
 }
