--- a/src/sass/layouts/_price.scss
+++ b/src/sass/layouts/_price.scss
@@ -1,6 +1,34 @@
 .price {
-  // background-image: url(../images/price/price-img@1x.jpg);
-  background-color: $primary-bgc;
+  // background-color: $primary-bgc;
+  background-image: 
+      url(../images/price/bg-png-mob.png),
+    linear-gradient(
+      to right,
+      $primary-bgc,
+      $primary-bgc
+    );
+    background-size: cover;
+    background-repeat: no-repeat;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    background-image: 
+      url(../images/price/bg-png-tablet.png),
+      linear-gradient(
+        to right,
+        $primary-bgc,
+        $primary-bgc
+      );
+    }
+
+      @media screen and (min-width: 1200px) {
+    background-image: 
+      url(../images/price/bg-png-desctop.png),
+      linear-gradient(
+        to right,
+        $primary-bgc,
+        $primary-bgc
+      );
+    }
 }
 
 .price-content {
