--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,3 +13,5 @@ $main-font: 'Open Sans', sans-serif;
 $title-font: 'Raleway', sans-serif;
 
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+$tab-size: 15px;
