--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,35 @@
-<div class="section">
+<section class="section">
   <div class="container">
-    Галерея
+    <h3 class="section-description">На латинском языке “барба” означает “борода”</h3>
+    <ul class="cards">
+      <li class="cards__item">
+        <div class="wrap gallery-wrap">
+          <img srcset="./images/gallery/gallery-img1@1x.jpg 1x, ./images/gallery/gallery-img1@2x.jpg 2x"
+            src="./images/gallery/gallery-img1@1x.jpg" alt="Десктопные приложения" class="img">
+          <h3 class="wrap__title">Десктопные приложения</h3>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="wrap gallery-wrap">
+          <img srcset="./images/gallery/gallery-img2@1x.jpg 1x, ./images/gallery/gallery-img2@2x.jpg 2x"
+            src="./images/gallery/gallery-img2@1x.jpg" alt="Мобильные приложения" class="img">
+          <h3 class="wrap__title">Мобильные приложения</h3>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="wrap gallery-wrap">
+          <img srcset="./images/gallery/gallery-img3@1x.jpg 1x, ./images/gallery/gallery-img3@2x.jpg 2x"
+            src="./images/gallery/gallery-img3@1x.jpg" alt="Дизайнерские решения" class="img">
+          <h3 class="wrap__title">Дизайнерские решения</h3>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="wrap gallery-wrap">
+          <img srcset="./images/gallery/gallery-img4@1x.jpg 1x, ./images/gallery/gallery-img4@2x.jpg 2x"
+            src="./images/gallery/gallery-img4@1x.jpg" alt="Дизайнерские решения" class="img">
+          <h3 class="wrap__title">Дизайнерские решения</h3>
+        </div>
+      </li>
+    </ul>
   </div>
-</div>
+</section>
