--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="container container-hero">
+    
     <div class="hero-aside">
-      <!-- <img src="../src/images/header/header.jpg" alt=""> -->
       <ul class="hero-social-list">
         <li class="hero-social-item">
           <a href="#" class="hero-social-link"> Instagram </a>
@@ -13,26 +13,25 @@
     </div>
 
     <div class="hero-main-content">
-      <span class="description"> A hair salon for men in Kyiv </span>
+      <span class="section-description"> A hair salon for men in Kyiv </span>
       <h1 class="hero-title">BarberShop</h1>
-      <p>
-        Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
+      <p class="hero-subtitle">
+        Мы эксперты в модных мужских стрижках. <br/> Работаем быстро, осторожно и со
         вкусом.
       </p>
     </div>
-    <!-- ----------------------------- -->
+    <!-- <img src="../src/images/header/main-hero-bcg-img-mini.jpg" alt="" class="hero-main-bcg-img" width="1125" height="680"> -->
 
     <ul class="slider-button-list">
       <li class="slider-button-item">
-        <button class="slider-btn slider-btn-inactive">Назад</button>
+        <button class="slider-btn slider-btn--left">Назад</button>
       </li>
 
       <li class="slider-button-item">
-        <button class="slider-btn">Вперёд</button>
+        <button class="slider-btn slider-btn--right">Вперёд</button>
       </li>
     </ul>
 
-    <!-- ------------------------- -->
     <ul class="dots">
       <li class="active dot">
         <button type="button" class="dot-part"></button>
