--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,5 +1,5 @@
 <section class="section">
-    <div class="container">
+    <div class="container feature-container">
         <div class="feature-block-first">
             <p class="section-description subtitle">старая традиционная школа</p>
             <h2 class="section-title feature-title">Почему приходят именно к нам?</h2>
