--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -30,7 +30,11 @@
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: $black-text-color;
+  // color: $black-text-color;
+  color: rgba(157, 164, 189, 0.6);
+
+  
+  
 }
 
 .section-discription--gray {
