--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -1,10 +1,17 @@
 .about {
   list-style: none;
 
-  @media screen and (min-width: 480px) {
-    // margin-left: 31px;
-    margin-right: 30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
   }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.image-wrapper {
+  width: 50%;
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -17,21 +24,23 @@
 }
 
 .about-gallery {
-  display: none;
-  // padding-left: 15px;
   padding-right: 15px;
+
+  display: none;
   height: 445px;
 
   @media screen and (min-width: 768px) {
+    padding: 15px;
+
+    display: flex;
     width: 330px;
     height: 235px;
-    display: flex;
     flex-direction: column;
   }
   @media screen and (min-width: 1200px) {
+    display: flex;
     width: 270px;
     height: 445px;
-    display: flex;
     flex-direction: row;
   }
 }
@@ -56,24 +65,27 @@
 
 .about-desc {
   margin: 0;
+
   font-weight: 400;
-  font-size: 18px;
-  line-height: 1.66;
   letter-spacing: 0.02em;
   color: #555555;
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+
+    font-size: 16px;
+    line-height: 1.62;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 50%;
+
+    font-size: 18px;
+    line-height: 1.66;
+  }
 }
+
 .about-text {
   font-size: 14px;
   line-height: 1.85;
-  scroll-padding-right: 20px;
-}
-.section-title.about {
-  margin: 0;
-}
-
-.description.about::before {
-  content: '';
-  width: 1px;
-  height: 60px;
-  background: #303030;
+  letter-spacing: 0.02em;
 }
