разделен на 2 колонки список, осталось придумать стилизацию градиентом

--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -6,7 +6,7 @@
       мастеров</h3>
     <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
     <div class="price-content">
-      <ul class="price-list text-price-mob">
+      <ul class="price-list text-price">
         <li class="service">
           <span>Мужская стрижка</span>
           <span class="decor"></span>
