--- a/src/sass/layouts/_price.scss
+++ b/src/sass/layouts/_price.scss
@@ -57,6 +57,29 @@
 
   background-image: 
   linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+
+  @media screen and (min-width: 1200px) {
+    padding: 30px 40px;
+
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
+    height: 240px;
+    // width: 1170px;
+
+    column-count: 2;
+    colomn-width: 585px;
+    column-gap: 80px;
+  }
+}
+
+// проверить
+.price-item:nth-child(4),
+.price-item:nth-child(8) {
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
+
 }
 
 .price-item:not(:last-child) {
