--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -6,51 +6,52 @@
       мастеров</h3>
     <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
     <div class="price-content">
+      <span class="background"></span>
       <ul class="price-list text-price">
-        <li class="service">
+        <li class="price-item">
           <span>Мужская стрижка</span>
           <span class="decor"></span>
           <span>от 300 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Стрижка бороды</span>
           <span class="decor"></span>
           <span>от 200 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Стрижка усов</span>
           <span class="decor"></span>
           <span>от 200 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Бритье опасной бритвой</span>
           <span class="decor"></span>
           <span>от 200 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Cтрижка у стажера</span>
           <span class="decor"></span>
           <span>от 50 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Стрижка под насадку</span>
           <span class="decor"></span>
           <span>от 200 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Детская стрижка (до 12 лет)</span>
           <span class="decor"></span>
           <span>от 300 грн.</span>
         </li>
-        <li class="service">
+        <li class="price-item">
           <span>Камуфлирование седины</span>
           <span class="decor"></span>
           <span>от 200 грн.</span>
         </li>
       </ul>
-      <div class="price-button-box">
-        <button class="button">онлайн-запись</button>
-      </div>
+    </div>
+    <div class="price-button-box">
+      <button class="button">онлайн-запись</button>
     </div>
   </div>
 </section>
