--- a/src/sass/layouts/_price.scss
+++ b/src/sass/layouts/_price.scss
@@ -1,5 +1,5 @@
 .price {
-  // background-color: $primary-bgc;
+  background-color: $primary-bgc;
   background-image: 
       url(../images/price/bg-png-mob.png),
     linear-gradient(
@@ -31,12 +31,27 @@
     }
 }
 
+// .background {
+//   position: absolute;
+//   z-index: 5;
+// @media screen and (min-width: 1200px) {
+//   background-image: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
+//   background-size: 585px 240px;
+//   top: 0;
+//   left: 0;
+//     }
+// }
+
 .price-content {
   color: $secondary-grey-color;
+
 }
 
-.service {
+.price-item {
   display: flex;
+}
+
+.price-item:not(:last-child) {
   margin-bottom: 20px;
 }
 
@@ -48,10 +63,13 @@
 }
 
 .price-title {
+  position: relative;
   margin-bottom: 44px;
+
 }
 
 .price-list {
+  z-index: 2;
   padding: 30px;
   margin-bottom: 50px;
 
@@ -60,28 +78,11 @@
 
   @media screen and (min-width: 1200px) {
     padding: 30px 40px;
-
-    // display: flex;
-    // flex-direction: column;
-    // flex-wrap: wrap;
     height: 240px;
-    // width: 1170px;
 
     column-count: 2;
-    colomn-width: 585px;
     column-gap: 80px;
+    background-size: 50% auto;
+
   }
-}
-
-// проверить
-.price-item:nth-child(4),
-.price-item:nth-child(8) {
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 0;
-  }
-
-}
-
-.price-item:not(:last-child) {
-  margin-bottom: 20px;
 }
