--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -1,3 +1,6 @@
 <div class="copyright">
-  Copyright
+  <div class="container copyright-container">
+    <div class="copyright-social">текстовые социалки андрей_сделай</div>
+    <p class="copyright-text">&copy; Copyright 2020</p>
+  </div>
 </div>
