--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,4 +1,7 @@
 .button {
+  cursor: pointer;
+  width: 160px;
+  height: 40px;
   border: none;
   padding: 12px 20px;
   background-color: transparent;
