--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,55 @@
 <footer class="footer">
-  <p style="background-color: burlywood;">вариант 2</p>
-  <include src="./partials/form-footer.html"></include>
-  <include src="./partials/contacts.html"></include>
-  <include src="./partials/copyright.html"></include>
+
+  <div class="footer-container">
+    <!-- <include src="./partials/form-footer.html"></include> -->
+    <div class="section container modal">
+      <h2 class="section-title section-title--white footer-title">Онлайн-запись</h2>
+      <form class="form">
+        <div class="form-wrap">
+          <div class="form-field">
+            <input type="text" class="form-input" name="name" id="name" placeholder=" " />
+            <label for="name" class="form-label">имя*</label>
+          </div>
+          <div class="form-field">
+            <input type="tel" class="form-input" name="tel" id="tel" placeholder=" " />
+            <label for="tel" class="form-label">телефон*</label>
+          </div>
+        </div>
+        <div class="form-field">
+          <textarea class="form-textarea" name="comment" id="comment" placeholder=" "></textarea>
+          <label for="comment" class="form-label">сообщение</label>
+        </div>
+        <button type="submit" class="form-button button">Отправить</button>
+      </form>
+    </div>
+
+    <!-- <include src="./partials/contacts.html"></include> -->
+    <div class="section contact">
+      <div class="container">
+        <h2 class="section-title section-title--white footer-title">Контакты</h2>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="" class="address-link">ул. Васильковая, 7А<br> Киев, 08132</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+380441111111" class="address-link">
+                +38 044 111 11 11
+              </a>
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link address-link--line">
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+        </address>
+        <div class="working-hours">
+          <h3 class="section-description section-discription--white">время работы</h3>
+          <p class="working-hours-text">Ежедневно с 9:00 до 22:00</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <include src="./partials/copyright.html"></include> -->
 </footer>
