--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -1,10 +1,10 @@
 .about {
   list-style: none;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     display: flex;
     flex-direction: row;
   }
@@ -13,11 +13,11 @@
 .image-wrapper {
   width: 50%;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     display: flex;
     flex-direction: row;
   }
@@ -29,7 +29,7 @@
   display: none;
   height: 445px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     padding: 15px;
 
     display: flex;
@@ -37,7 +37,7 @@
     height: 235px;
     flex-direction: column;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     display: flex;
     width: 270px;
     height: 445px;
@@ -46,14 +46,14 @@
 }
 
 .about-block {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile) {
     width: 100%;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: 50%;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     width: 50%;
     padding-left: 30px;
   }
@@ -70,13 +70,13 @@
   letter-spacing: 0.02em;
   color: #555555;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: 50%;
 
     font-size: 16px;
     line-height: 1.62;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     width: 50%;
 
     font-size: 18px;
