--- a/src/sass/layouts/_feature.scss
+++ b/src/sass/layouts/_feature.scss
@@ -5,13 +5,12 @@
 }
 
 .feature-container {
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     flex-direction: row-reverse;
     justify-content: space-around;
   }
@@ -22,7 +21,7 @@
   margin-bottom: 20px;
   line-height: 1.16;
 }
-  
+
 .subtitle {
   margin-top: 0;
   margin-bottom: 20px;
@@ -35,23 +34,23 @@
 }
 
 .feature-item:nth-child(2) {
-    margin-top: 35px;
+  margin-top: 35px;
 }
 
 .feature-item:nth-child(3) {
-    margin-top: -35px;
+  margin-top: -35px;
 }
 
 .feature-item {
-  width: calc(100%/2);
+  width: calc(100% / 2);
   max-width: 223px;
   padding: 15px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     max-width: 240px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     max-width: 200px;
   }
 }
@@ -91,34 +90,31 @@
 .feature-block-first {
   margin-bottom: 40px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     max-width: 500px;
     margin-right: 228px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     max-width: 500px;
     margin-bottom: 0;
   }
 }
 
 .feature-block-second {
-
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     max-width: 450px;
     margin-left: 279px;
   }
-  
-  @media screen and (min-width: 1200px) {
+
+  @media screen and (min-width: $desktop) {
     max-width: 370px;
     margin-top: -9px;
   }
 }
 
-
-
-// @media screen and (min-width: 768px) {
+// @media screen and (min-width: $tablet) {
 // }
 
-// @media screen and (min-width: 1200px) {
+// @media screen and (min-width: $desktop) {
 // }
