--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -2,12 +2,12 @@
   padding-top: 84px;
   padding-bottom: 84px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     padding-top: 130px;
     padding-bottom: 130px;
   }
