fix medai masters and feature and price

--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -1,6 +1,6 @@
 <div class="copyright">
   <div class="container copyright-container">
-    <div class="copyright-social">текстовые социалки андрей_сделай</div>
+    <div class="copyright-social">текстовые социалки</div>
     <p class="copyright-text">&copy; Copyright 2020</p>
   </div>
 </div>
