--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,15 +1,11 @@
 <section class="section master-section">
   <div class="container">
-    <p class="section-discription">для настоящих ценителей атмосферы</p>
-    <h2 class="section-title">Наши мастера</h2>
-    <ul class="masters-list">
-      <li class="masters-item">
+    <p class="section-description">для настоящих ценителей атмосферы</p>
+    <h2 class="section-title masters-title">Наши мастера</h2>
+    <ul class="cards">
+      <li class="cards__item cards__item--second">
         <div class="wrap masters-wrap">
-          <img
-            src="./images/our-master/our-masters-img1@1x.jpg"
-            alt="Имя Мастера"
-            class="img master-img"
-          />
+          <img src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img master-img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
@@ -46,13 +42,9 @@
           </ul>
         </div>
       </li>
-      <li class="masters-item">
+      <li class="cards__item cards__item--second">
         <div class="wrap masters-wrap">
-          <img
-            src="./images/our-master/our-masters-img2@1x.jpg"
-            alt="Имя Мастера"
-            class="img"
-          />
+          <img src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
@@ -89,13 +81,9 @@
           </ul>
         </div>
       </li>
-      <li class="masters-item">
+      <li class="cards__item cards__item--second">
         <div class="wrap masters-wrap">
-          <img
-            src="./images/our-master/our-masters-img3@1x.jpg"
-            alt="Имя Мастера"
-            class="img"
-          />
+          <img src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
