--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,27 +1,36 @@
 /* card set */
 
 .cards {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 
-  margin: -$tab-size;
+	margin: -$tab-size;
 
-  padding: 0;
-  list-style: none;
+	padding: 0;
+	list-style: none;
 }
 
 .cards__item {
-  padding: $tab-size;
-  margin-left: auto;
-  margin-right: auto;
+	padding: $tab-size;
+	margin-left: auto;
+	margin-right: auto;
 
-  @media screen and (min-width: $tablet) {
-    width: calc(100% / 2);
-  }
-  @media screen and (min-width: $desktop) {
-    width: calc(100% / 4);
-  }
+	@media screen and (min-width: $tablet) {
+		width: calc(100% / 2);
+	}
+	@media screen and (min-width: $desktop) {
+		width: calc(100% / 4);
+	}
+}
+
+.cards__item--second {
+	@media screen and (min-width: $tablet) {
+		width: inherit;
+	}
+	@media screen and (min-width: $desktop) {
+		width: calc(100% / 4);
+	}
 }
