--- a/src/sass/layouts/_feature.scss
+++ b/src/sass/layouts/_feature.scss
@@ -1,110 +1,110 @@
 .feature-container {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-direction: column;
-  }
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		flex-direction: column;
+	}
 
-  @media screen and (min-width: $desktop) {
-    flex-direction: row-reverse;
-    justify-content: space-around;
-  }
+	@media screen and (min-width: $desktop) {
+		flex-direction: row-reverse;
+		justify-content: space-around;
+	}
 }
 
 .feature-title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  line-height: 1.16;
+	margin-top: 0;
+	margin-bottom: 20px;
+	line-height: 1.16;
 }
 
 .subtitle {
-  margin-top: 0;
-  margin-bottom: 20px;
+	margin-top: 0;
+	margin-bottom: 20px;
 }
 
 .feature-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -15px;
+	display: flex;
+	flex-wrap: wrap;
+	margin: -15px;
 }
 
 .feature-item:nth-child(2) {
-  margin-top: 35px;
+	margin-top: 35px;
 }
 
 .feature-item:nth-child(3) {
-  margin-top: -35px;
+	margin-top: -35px;
 }
 
 .feature-item {
-  width: calc(100% / 2);
-  max-width: 223px;
-  padding: 15px;
+	width: calc(100% / 2);
+	max-width: 223px;
+	padding: 15px;
 
-  @media screen and (min-width: $tablet) {
-    max-width: 240px;
-  }
+	@media screen and (min-width: $tablet) {
+		max-width: 240px;
+	}
 
-  @media screen and (min-width: $desktop) {
-    max-width: 200px;
-  }
+	@media screen and (min-width: $desktop) {
+		max-width: 200px;
+	}
 }
 
 .feature-position {
-  width: 100%;
-  height: 133px;
-  padding: 20px;
-  background-color: $section-bgc;
+	width: 100%;
+	height: 133px;
+	padding: 20px;
+	background-color: $section-bgc;
 }
 
 .feature-number {
-  display: block;
-  font-family: Open Sans;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.35;
-  letter-spacing: 0.05em;
-  text-align: center;
+	display: block;
+	font-family: Open Sans;
+	font-weight: 700;
+	font-size: 42px;
+	line-height: 1.35;
+	letter-spacing: 0.05em;
+	text-align: center;
 }
 
 .feature-words {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  font-family: Open Sans;
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  color: $black-text-color;
-  text-align: center;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-family: Open Sans;
+	font-weight: 600;
+	font-size: 11px;
+	line-height: 1.36;
+	color: $black-text-color;
+	text-align: center;
 }
 
 .feature-text {
-  margin-top: 0;
-  margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 .feature-block-first {
-  margin-bottom: 40px;
+	margin-bottom: 40px;
 
-  @media screen and (min-width: $tablet) and (max-width: 1199px) {
-    max-width: 500px;
-    margin-right: 228px;
-  }
+	@media screen and (min-width: $tablet) and (max-width: calc(#{$desktop} - 1px)) {
+		max-width: 500px;
+		margin-right: 228px;
+	}
 
-  @media screen and (min-width: $desktop) {
-    max-width: 500px;
-    margin-bottom: 0;
-  }
+	@media screen and (min-width: $desktop) {
+		max-width: 500px;
+		margin-bottom: 0;
+	}
 }
 
 .feature-block-second {
-  @media screen and (min-width: $tablet) and (max-width: 1199px) {
-    max-width: 450px;
-    margin-left: 279px;
-  }
+	@media screen and (min-width: $tablet) and (max-width: calc(#{$desktop} - 1px)) {
+		max-width: 450px;
+		margin-left: 279px;
+	}
 
-  @media screen and (min-width: $desktop) {
-    max-width: 370px;
-    margin-top: -9px;
-  }
+	@media screen and (min-width: $desktop) {
+		max-width: 370px;
+		margin-top: -9px;
+	}
 }
 
 // @media screen and (min-width: $tablet) {
