--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,50 +1,82 @@
 .header {
-  background-color: transparent;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 5;
+	background-color: transparent;
+	position: absolute;
+	top: 30px;
+	left: 0;
+	right: 0;
+	z-index: 5;
 }
 
 .header-container {
-  display: flex;
-  padding-left: 46px;
+	display: flex;
+	// padding-left: 46px;
+	// padding-right: 46px;
+	justify-content: space-between;
+
+	@media screen and (min-width: $tablet) {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		padding-left: 46px;
+		padding-right: 46px;
+	}
 }
 
 .logo {
-  display: inline-block;
-  z-index: 2;
+	display: inline-block;
+	z-index: 10;
 
-  width: 69px;
-  height: 56px;
-  background-image: url(../../src/images/svg/logo.svg);
-  margin-right: 40px;
+	width: 69px;
+	height: 56px;
+	background-image: url(../../src/images/svg/logo.svg);
+
+	@media screen and (min-width: $desktop) {
+		margin-right: 70px;
+	}
 }
 
 .nav-list {
-  display: flex;
-  color: #fff;
-  
+	display: flex;
+	color: #fff;
 }
 
 .nav-item {
-  padding-top: 13px;
-  padding-bottom: 13px;
+	padding-top: 13px;
+	padding-bottom: 13px;
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 40px;
+	@media screen and (min-width: $tablet) {
+		margin-right: 24px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-right: 40px;
+	}
 }
 
 .contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		flex-direction: column;
+	}
+
+	@media screen and (min-width: $desktop) {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		margin-left: auto;
+	}
 }
 
 .nav-contact {
-  padding-top: 13px;
-  padding-bottom: 13px;
-  margin-right: 40px;
+	@media screen and (min-width: $desktop) {
+		padding-top: 13px;
+		padding-bottom: 13px;
+		margin-right: 40px;
+	}
+
+	color: #fff;
 }
