фикс контактов, direction row reverse.

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -65,7 +65,8 @@
 
 	@media screen and (min-width: $desktop) {
 		display: flex;
-		flex-direction: row;
+    flex-direction: row;
+    flex-flow: row-reverse;
 		align-items: center;
 		margin-left: auto;
 	}
