--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -2,10 +2,38 @@
 	<div class="container about">
 		<div class="image-wrapper">
 			<div class="about-gallery">
-				<img src="./images/about-us/about-us-desktop1@1x.jpg" alt="" class="img" />
+				<img
+					src="./images/about-us/about-us-desktop1@1x.jpg"
+					alt=""
+					class="img"
+					srcset="./images/about-us/about-us-desktop1@2x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x"
+				/>
 			</div>
 			<div class="about-gallery">
-				<img src="./images/about-us/about-us-desktop2@1x.jpg" alt="" class="img" />
+				<img
+					src="./images/about-us/about-us-desktop2@1x.jpg"
+					alt=""
+					class="img"
+					srcset="./images/about-us/about-us-desktop2@2x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x"
+				/>
+			</div>
+		</div>
+		<div class="image-wrapper tablet">
+			<div class="about-gallery">
+				<img
+					src="./images/about-us/about-us-img1@1x.jpg"
+					alt=""
+					class="img"
+					srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@1x.jpg 2x"
+				/>
+			</div>
+			<div class="about-gallery">
+				<img
+					src="./images/about-us/about-us-img2@1x.jpg"
+					alt=""
+					class="img"
+					srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@1x.jpg 2x"
+				/>
 			</div>
 		</div>
 		<div class="about-block">
