--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,35 @@
 <header class="header">
 	<div class="container header-container">
 		<span class="logo"></span>
-		<nav>
-			<ul class="nav-list">
-				<li class="nav-item"><a href="#">О нас</a></li>
-				<li class="nav-item"><a href="#">Услуги и цены</a></li>
-				<li class="nav-item"><a href="#">Мастера</a></li>
-				<li class="nav-item"><a href="#">Контакты</a></li>
-			</ul>
-		</nav>
 
-		<div class="contacts">
-      <button type="button" class="button">онлайн-запись</button>
-			<a href="tel:+380441111111" class="nav-contact">+38 044 111 11 11</a>
-			
+		<button type="button" class="nav-button is-open" data-menu-button>
+			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню">
+				<use class="menu-icon-open" href="./images/sprite.svg#menu-icon-open"></use>
+				<use class="menu-icon-close" href="./images/sprite.svg#menu-icon-close"></use>
+			</svg>
+		</button>
+
+		<div class="menu is-open" data-menu>
+			<nav class="nav">
+				<ul class="nav-list">
+					<li class="nav-item"><a href="#">О нас</a></li>
+					<li class="nav-item"><a href="#">Услуги и цены</a></li>
+					<li class="nav-item"><a href="#">Мастера</a></li>
+					<li class="nav-item"><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
+
+			<div class="contacts">
+				<button type="button" class="button">онлайн-запись</button>
+				<a href="tel:+380441111111" class="nav-contact">+38 044 111 11 11</a>
+			</div>
+
+			<div class="pseudo-socials">
+				<ul class="pseudo-socials-list">
+					<li class="pseudo-socials-item current"><a href="#" class="pseudo-socials-link">Instagram</a></li>
+					<li class="pseudo-socials-item"><a href="#" class="pseudo-socials-link">Youtube</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </header>
